--- a/src/stylesheets/index.css
+++ b/src/stylesheets/index.css
@@ -29,6 +29,16 @@ h1{
     flex-flow: column nowrap;
 }
 
+.row{
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: space-between;
+}
+
+.max-height{
+    height:100%;
+}
+
 .gap20{
     gap:20px;
 }
@@ -36,4 +46,85 @@ h1{
 .birdy-logo-h1{
     color: #bd93f9;
     letter-spacing: 3px;
+}
+
+.link-route:link, .link-route:visited{
+    color: #ff79c6;
+}
+
+.link-blue:link, .link-blue:visited{
+    color: #8be9fd;
+}
+
+.link-route:hover, .link-blue:hover{
+    color: #bd93f9;
+}
+
+.link-no-style{
+    text-decoration: none;
+}
+
+.error-message{
+    color: #FFD6F1;
+    font-style: italic;
+    font-size: small;
+    letter-spacing: 1.5px;
+}
+
+.title-container{
+    width:100%;
+    text-align: center;
+    background-color: #44475a;
+    padding: 20px;
+    margin-top: 50px;
+}
+
+.page-title{
+    letter-spacing: 3px;
+}
+
+.margin-right-auto{
+    margin-right: auto;
+}
+
+.color-light-pink{
+    color: #FFD6F1;
+}
+
+.color-light-grey{
+    color: #5c5e69;
+}
+
+.bold{
+    font-weight: bold;
+}
+
+.round{
+    border-radius: 100%;
+}
+
+.pointer{
+    cursor: pointer;
+}
+
+.default-font{
+    color: #f8f8f2;
+    font-family: Poppins, sans-serif;
+    font-size: 16px;
+}
+
+.green{
+    color: rgb(138, 255, 128);
+}
+
+.orange{
+    color: rgb(255, 149, 128);
+}
+
+.pink{
+    color: rgb(255, 121, 198);
+}
+
+.purple{
+    color: rgb(189, 147, 249, 0.7);
 }
