--- a/src/stylesheets/index.css
+++ b/src/stylesheets/index.css
@@ -113,6 +113,11 @@ h1{
     font-size: 16px;
 }
 
+.small-font{
+    font-family: Poppins, sans-serif;
+    font-size: 14px;
+}
+
 .green{
     color: rgb(138, 255, 128);
 }
@@ -131,4 +136,8 @@ h1{
 
 .huge-font{
     font-size: 1.5em;
+}
+
+.display-none{
+    display:none;
 }
