style dashboard buttons

--- a/birdy-client/src/stylesheets/index.css
+++ b/birdy-client/src/stylesheets/index.css
@@ -107,6 +107,10 @@ h1{
     cursor: pointer;
 }
 
+.disabled-pointer{
+    cursor: no-drop;
+}
+
 .default-font{
     color: #f8f8f2;
     font-family: Poppins, sans-serif;
